Bug Resolvido + Começo 4° Aula

--- a/pages/enviar-video.html
+++ b/pages/enviar-video.html
@@ -31,7 +31,7 @@
 
     <main class="container">
 
-        <form class="container__formulario">
+        <form class="container__formulario" data-formulario>
             <h2 class="formulario__titulo">Envie um vídeo!</h3>
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="url">Link embed</label>
@@ -52,7 +52,7 @@
                         id='imagem' data-imagem />
                 </div>
 
-                <input class="formulario__botao" type="submit" data-envio />
+                <input class="formulario__botao" type="submit"/>
         </form>
 
     </main>
