--- a/pages/enviar-video.html
+++ b/pages/enviar-video.html
@@ -58,5 +58,5 @@
     </main>
 
 </body>
-<script src="../js/criaVideos.js" type="module"></script>
+<script src="../js/adicionaVideos.js" type="module"></script>
 </html>
