--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
             <div class="cabecalho__pesquisar">
 
-                <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input">
-                <button class="pesquisar__botao">
+                <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input" data-pesquisa>
+                <button class="pesquisar__botao" data-botaoPesquisa>
 
             </div>
 
@@ -36,8 +36,9 @@
     </header>
 
     <ul class="videos__container" alt="videos alura" data-lista>
-
-    </ul>
-</body>
-<script src="js/mostraVideos.js" type="module"></script>
+        
+    </ul>    
+    </body>
+<script src="js/exibeVideos.js" type="module"></script>
+<script src="js/realizaBusca.js" type="module"></script>
 </html>
